--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li class="link-list"><a href="index.html">Home</a></li>
-            <li class="link-list"><a href="about.html">About</a></li>
-            <li class="link-list"><a href="contact.html">Contact</a></li>
-            <li class="link-list sign-in"><a href="sign-in.html">Sign in</a></li>
+            <li class="link-list"><a href="/views/about.ejs">About</a></li>
+            <li class="link-list"><a href="/views/contact.ejs">Contact</a></li>
+            <li class="link-list sign-in"><a href="/views/sign-in.ejs">Sign in</a></li>
         </ul>
     </nav>
 
@@ -28,4 +28,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="index.js" charset="UTF-8"></script>
 </body>
+
 </html>
